# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: cmake.yml
assets/: earthmap.ppm  f35.ppm  moon.ppm
config/: bonus.cfg  cornell.cfg  could.cfg  earth.cfg  f35.cfg  must.cfg  schema.cfg  should.cfg
docs/: Doxyfile.in
hooks/: pre-push.sh
include/: Common.hpp
include/arguments/: Effects.hpp  Kinds.hpp  Materials.hpp  Shapes.hpp  Textures.hpp
include/config/: Camera.hpp  Effects.hpp  Factory.hpp  Manager.hpp  Materials.hpp  Scene.hpp  Shapes.hpp  Textures.hpp
include/core/: Camera.hpp  Payload.hpp  Ray.hpp  Scene.hpp
include/effects/: Rotate.hpp  RotateX.hpp  RotateY.hpp  RotateZ.hpp  Smoke.hpp  Translate.hpp
include/exceptions/: Argument.hpp  Base.hpp  Cyclic.hpp  File.hpp  Missing.hpp  Parse.hpp  Range.hpp
include/interfaces/: IArguments.hpp  IHittable.hpp  IMaterial.hpp  ITexture.hpp
include/materials/: Dielectric.hpp  DiffuseLight.hpp  Isotropic.hpp  Lambertian.hpp  Metal.hpp
include/shapes/: Cone.hpp  Cylinder.hpp  Plane.hpp  Quad.hpp  Sphere.hpp
include/textures/: Checker.hpp  Image.hpp  Noise.hpp  SolidColor.hpp
include/utils/: AxisAlignedBBox.hpp  BVHNode.hpp  Color.hpp  ImageHelper.hpp  Interval.hpp  Perlin.hpp  VecN.hpp
sources/: main.cpp
sources/config/: Factory.cpp  Manager.cpp
sources/core/: Camera.cpp  Payload.cpp  Ray.cpp  Scene.cpp
sources/effects/: Rotate.cpp  RotateX.cpp  RotateY.cpp  RotateZ.cpp  Smoke.cpp  Translate.cpp
sources/materials/: Dielectric.cpp  DiffuseLight.cpp  Isotropic.cpp  (+2 more)
(+15 files in other folders)
